argocd/deployment-argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-redis
    spec:
      securityContext:
        runAsUser: null
        runAsGroup: null
        fsGroup: null
        runAsNonRoot: true
      serviceAccountName: argocd-redis        
      containers:
      - name: redis
