argocd/route-argocd.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-server
spec:
  host: argocd.apps.ocp4.example.com
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: argocd-server
    weight: 100
  wildcardPolicy: none
